<resources>
    <string name="app_name">Smart Home</string>
    <string name="loading">loading...</string>
    <string name="home">home</string>
    <string name="smart_home">Smart Home</string>
    <string name="welcome_to_smart_home">Welcome to Smart Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_signup">Signup</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setting">setting</string>
    <string name="bed">bed</string>
    <string name="bed_room">Bed Room</string>
    <string name="chairs">chairs</string>
    <string name="parlor">Parlor</string>
    <string name="spon">spon</string>
    <string name="kitchen">Kitchen</string>
    <string name="varander">Varander</string>
    <string name="garage">Garage</string>
    <string name="toilet">Bath Room</string>
    <string name="living_room">Living Room</string>
    <string name="dashboard">Dashboard</string>
</resources>